fix horizontal overflow on windows chrome

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,6 +5,7 @@ body {
 #root {
   width: 100vw;
   height: 100vh;
+  max-width: 100%;
   font-family: "Pavanam", sans-serif;
   display: flex;
   flex-direction: column;
